--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "bitrix-tilda-sync",
-    "version": "1.0.0",
-    "description": "Связка Битрикс24 и Тильда для изменения цвета домов",
-    "main": "server.js",
-    "scripts": {
-      "start": "node server.js"
-    },
-    "dependencies": {
-      "express": "^4.18.2",
-      "body-parser": "^1.20.2"
-    }
+  "name": "bitrix-tilda-sync",
+  "version": "1.0.0",
+  "description": "Sync Bitrix24 deals with Tilda houses",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
   }
-  
+}
